<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/translation_text"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/challenge_text_holder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="true"
            android:textSize="@dimen/primary_text_size"
            android:text="@string/encontrar_la_traducci"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.05"/>

    <LinearLayout
            android:id="@+id/result_holder"
            app:layout_constraintTop_toBottomOf="@id/translation_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/challenge_text_holder"
            android:layout_marginTop="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:gravity="center"
                    android:layout_weight="0.5"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textAllCaps="true"/>

            <TextView
                    android:id="@+id/score_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_val"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textAllCaps="true"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/round_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rounds"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textAllCaps="true"/>

            <TextView
                    android:id="@+id/round_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/null_val"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_weight="0.5"
                    android:textAllCaps="true"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/challenge_text_holder"
            android:layout_margin="20dp"
            android:background="@drawable/roundedbutton"
            app:layout_constraintTop_toBottomOf="@id/result_holder"
            app:layout_constraintBottom_toTopOf="@id/button_holder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/challenge_text"
                android:textColor="@android:color/white"
                android:layout_marginTop="50dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/primary_text_size"
                android:text="@string/find_the_translation"/>

    </RelativeLayout>

    <LinearLayout
            android:id="@+id/button_holder"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/challenge_text_holder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/roundedbutton"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:textSize="25sp"
                android:text="@string/yes"
                android:textColor="@android:color/white"
                android:textAllCaps="true"/>

        <Button
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/roundedbutton"
                android:layout_weight="0.5"
                android:layout_margin="5dp"
                android:textSize="25sp"
                android:text="@string/no"
                android:textColor="@android:color/white"
                android:textAllCaps="true"/>


    </LinearLayout>

    <ProgressBar
            android:id="@+id/progress_fetch"
            android:layout_width="100dp" android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.527"/>

</android.support.constraint.ConstraintLayout>